update about.html info and links
update basic info and footer info and links

--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -117,17 +117,7 @@
                             <h2 style="all:unset;">CN-BCOL 合作伙伴</h2>
                         </div>
                         <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                             iCollege和TDI 为「国际区块链奥林匹克竞赛」（“IBCOL”）的中国委员会「中国区块链奥林匹克竞赛」（“CN-BCOL”）的合作伙伴，为中国参赛者提供培训及提名国家代表队参加「国际区块链奥林匹克竞赛2021」（“ IBCOL 2021 ”）。
-                        </div>
-
-                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                           TDI（Talent Development Institute)<br>
-                           TDI（Talent Development Institute ）的使命是以寻找下一个天才为目标的培养人才机构。 TDI透过与各种合作伙伴的培训计划教导学生知识和技能，以协助其发挥所有的潜力。TDI的证书课程更可帮助政府机构、企业、学院、私人公司等找到所需的人才，以满足市场的高需求。
-                        </div>
-                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                            iCollege<br>
-                            iCollege是一间科技教育机构，iCollege的教学宗旨是intelligent & infinitas, 课程设计以轻松、有趣但又有效的多元方式为目标，让学生都以聪明的学习方式学习。引发出学生内在无限的潜能，令其尽展所长。
-
+                            創新科技處和香港區塊鏈學會 为「国际区块链奥林匹克竞赛」（“IBCOL”）的中国委员会「中国区块链奥林匹克竞赛」（“CN-BCOL”）的合作伙伴，为中国参赛者提供培训及提名国家代表队参加「国际区块链奥林匹克竞赛2023」（“ IBCOL 2023 ”）。
                         </div>
                     </div>
 
@@ -224,10 +214,10 @@
                     <div class="col-12 ">
                         <a href="https://www.instagram.com/ibcol_org" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/ig.png"></a>&nbsp;&nbsp;&nbsp;
-                        <a href="https://www.youtube.com/channel/UCxN1ZN_bSlWlVWncT9QcTkg" target="_blank"><img
+                        <!--<a href="https://www.youtube.com/channel/UCxN1ZN_bSlWlVWncT9QcTkg" target="_blank"><img
                                 class="media768FooterImg" src="./images/sm/yt.png"></a>&nbsp;&nbsp;
                         <a href="https://twitter.com/ibcolorg" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/tt.png"></a>&nbsp;&nbsp;
+                                src="./images/sm/tt.png"></a>&nbsp;&nbsp; --> 
                         <a href="https://www.facebook.com/ibcol.org" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/fb.png"></a>&nbsp;&nbsp;
                         <a href="https://www.linkedin.com/company/ibcol" target="_blank"><img class="media768FooterImg"
@@ -255,7 +245,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2021 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2023 International Blockchain
                     Olympiad. All
                     rights
                     reserved.</span>
