--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
                     </div>
                     <br>
                     <div class="col-12 mb-4">
-                        <a href="https://www.instagram.com/ibcol_org" target="_blank"><img class="media768FooterImg"
+                        <a href="https://www.instagram.com/hkbcsociety" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/ig.png"></a>&nbsp;&nbsp;&nbsp;
-                        <a href="https://www.youtube.com/channel/UCxN1ZN_bSlWlVWncT9QcTkg" target="_blank"><img
+                        <!--<a href="https://www.youtube.com/channel/UCxN1ZN_bSlWlVWncT9QcTkg" target="_blank"><img
                                 class="media768FooterImg" src="./images/sm/yt.png"></a>&nbsp;&nbsp;
                         <a href="https://twitter.com/ibcolorg" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/tt.png"></a>&nbsp;&nbsp;
+                                src="./images/sm/tt.png"></a>&nbsp;&nbsp; -->
                         <a href="https://www.facebook.com/ibcol.org" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/fb.png"></a>&nbsp;&nbsp;
                         <a href="https://www.linkedin.com/company/ibcol" target="_blank"><img class="media768FooterImg"
