--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="home-content">
             <div class="row home-content__main">
 
-                <div class="s-homeTextColor "> CN-BCOL 已合并成史上第一個</div>
+                <div class="s-homeTextColor "> CN-BCOL 已合并成</div>
                 
                 <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2023 <br> 大湾区区块链奥林匹克竞赛</h1>
 
