--- a/gba.html
+++ b/gba.html
@@ -131,7 +131,7 @@
                                                     <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
                                                   </svg>
                                                 <div class="widget-49-meeting-info">
-                                                    <span class="widget-49-pro-title"> 日期：9月16日</span>
+                                                    <span class="widget-49-pro-title"> 日期：2023年9月16日</span>
                                                     <!--<span class="widget-49-meeting-time"> TBC 待定</span>-->
                                                 </div>
                                             </div>
@@ -143,6 +143,7 @@
                                                     <span class="widget-49-pro-title">活动地点：香港(待定)</span>
                                                 </div>
                                             </div>
+                                            <!-- no links ready 2023
                                             <div class="widget-49-title-wrapper">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
                                                     <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
@@ -162,7 +163,8 @@
                                                 align-items: center;
                                                 justify-content: center;" >注册 </button> 
                                             </div>
-                                            
+                                            -->
+
                                         </div>
                                     </div>
                                 </div>
@@ -299,13 +301,13 @@
                                     5.	发展规划<br>
                                     6.	测试计划<br>
                                     <br>
-                                    区块链解决方案可以用任何无数的工具来表达，但至少需要以下三样： <b>IEEE格式的论文、视频和海报 </b>. 原型也很有帮助：低保真（图表或模型）、高保真（模拟应用程序）或功能原型（带代码）。<br>
+                                    区块链解决方案可以用任何无数的工具来表达，但至少需要以下三样： <b>IEEE格式的论文、视频和海报 </b><br>
                                     <br>
                                     不需要展示技术技能——因此不需要编码，更不用说智能合约或链码了——尽管如果团队认为它对解释有用，那就去吧！<br>
                                     <br>
                                     祝你好运！<br> <br></p>
 
-                                            <p><b>截止日期：9 月 2 日</b>
+                                            <p><b>截止日期：2023年9月2日</b>
                                                <!-- Rules page not ready yet 2023 请访问我们的规则页面，了解有关截止日期和方案提交的更多信息。</p> -->
                                 </div>
                             </div>
