removed contact-cn-bcol.html at navigation menu

--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -52,7 +52,6 @@
                 <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
                 <li><a class="NavLinkComponent " route="" href="gba.html"> 大湾区IBCOL</a></li>
                 <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
                         href="https://passport.ibcol.org/" target="_blank">注册</a></li>
                <!--  <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li> -->
@@ -66,7 +65,6 @@
                     <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
                     <li><a class="NavLinkComponent " route="" href="gba.html"> 大湾区IBCOL</a></li>
                     <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
-                    <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                     <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
                             href="https://passport.ibcol.org/" target="_blank">注册</a></li>
              <!--        <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li>  -->
@@ -212,12 +210,8 @@
                     </div>
                     <br>
                     <div class="col-12 ">
-                        <a href="https://www.instagram.com/ibcol_org" target="_blank"><img class="media768FooterImg"
+                        <a href="https://www.instagram.com/hkbcsociety" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/ig.png"></a>&nbsp;&nbsp;&nbsp;
-                        <!--<a href="https://www.youtube.com/channel/UCxN1ZN_bSlWlVWncT9QcTkg" target="_blank"><img
-                                class="media768FooterImg" src="./images/sm/yt.png"></a>&nbsp;&nbsp;
-                        <a href="https://twitter.com/ibcolorg" target="_blank"><img class="media768FooterImg"
-                                src="./images/sm/tt.png"></a>&nbsp;&nbsp; --> 
                         <a href="https://www.facebook.com/ibcol.org" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/fb.png"></a>&nbsp;&nbsp;
                         <a href="https://www.linkedin.com/company/ibcol" target="_blank"><img class="media768FooterImg"
