--- a/workshops.html
+++ b/workshops.html
@@ -53,7 +53,7 @@
                 <li><a class="NavLinkComponent " route="" href="gba.html"> 大湾区IBCOL</a></li>
                 <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
-                        href="https://passport.ibcol.org/" target="_blank">注册</a></li>
+                        href="mailto:cn@ibcol.org?subject=2023中国奥链竞赛参赛者注册" target="_blank">注册</a></li>
               <!--   <li><a class="NavLinkComponent" route="" href="./en/get-started-with-cn-bcol.html" class="">EN</a></li>  -->
             </ul>
         </div>
@@ -66,7 +66,7 @@
                     <li><a class="NavLinkComponent " route="" href="gba.html"> 大湾区IBCOL</a></li>
                     <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
                     <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
-                            href="https://passport.ibcol.org/" target="_blank">注册</a></li>
+                            href="mailto:cn@ibcol.org?subject=2023中国奥链竞赛参赛者注册" target="_blank">注册</a></li>
                 <!--     <li><a class="NavLinkComponent" route="" href="./en/get-started-with-cn-bcol.html" class="">EN</a>
                     </li> -->
                 </ul>
