--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -57,7 +57,7 @@
               <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
               <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
               <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
-                      href="https://passport.ibcol.org/" target="_blank">注册</a></li>
+                      href="mailto:cn@ibcol.org?subject=2023中国奥链竞赛参赛者注册" target="_blank">注册</a></li>
             <!--     <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li> -->
             </ul>
         </div>
@@ -71,7 +71,7 @@
                   <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
                   <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                   <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
-                          href="https://passport.ibcol.org/" target="_blank">注册</a></li>
+                          href="mailto:cn@ibcol.org?subject=2023中国奥链竞赛参赛者注册" target="_blank">注册</a></li>
                   <!--   <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>   -->
                 </ul>
             </div>
