--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="row">
                     <div class="col-12">
                         <p class="footerParaText mb-4 justify">CN-BCOL办公室<br>
-                            <a href=""><b>pmo@cnbcol.org</b></a></p>
+                            <a href=""><b>cn@ibcol.org</b></a></p>
                     </div>
 
                 </div>
