--- a/gba.html
+++ b/gba.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> GBA IBCOL 2022 大湾区块链奥林匹克竞赛</title>
+    <title>关于 GBA IBCOL 大湾区区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛</title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description"
         content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2023，CN-BCOL将会选出8支中国代表队伍参加竞赛。" />
